--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#142C3F</color>
-    <color name="colorPrimaryDark">#0E3049</color>
+    <color name="colorPrimaryDark">#142C3F</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorLazadaOrange">#F36E21</color>
     <color name="color_black">#000000</color>
