--- a/app/src/main/res/layout/fragment_dang_ky.xml
+++ b/app/src/main/res/layout/fragment_dang_ky.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.trangchu.fragment.ThuongHieuFragment">
+    tools:context=".view.dangnhap.fragment.DangKyFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
