--- a/app/src/main/res/layout/fragment_nha_cua_doi_song.xml
+++ b/app/src/main/res/layout/fragment_nha_cua_doi_song.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.TrangChu.Fragment.NhaCuaDoiSongFragment">
+    tools:context=".view.trangchu.fragment.NhaCuaDoiSongFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
