--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".view.dangnhap.DangNhapActivity">
+    android:fitsSystemWindows="true"
+    >
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -16,7 +16,7 @@
             app:logo="@android:drawable/ic_menu_close_clear_cancel"
             app:title="@string/title_login_reg"
             app:titleTextColor="@color/material_color_blue_grey_100"
-            app:titleMarginStart="@dimen/_22sdp"/>
+            app:layout_scrollFlags="scroll|enterAlways"/>
         <android.support.design.widget.TabLayout
             android:id="@+id/tabBar"
             android:layout_width="match_parent"
@@ -25,8 +25,11 @@
             app:tabTextColor="@color/material_color_blue_grey_100"
             app:tabTextAppearance="@style/AppTheme.TextNormal"/>
     </android.support.design.widget.AppBarLayout>
+
     <android.support.v4.view.ViewPager
         android:id="@+id/pagerDangNhap"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+</android.support.design.widget.CoordinatorLayout>
+
