--- a/app/src/main/res/layout/activity_trang_chu.xml
+++ b/app/src/main/res/layout/activity_trang_chu.xml
@@ -1,37 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
     android:id="@+id/drawerLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <FrameLayout
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appBar"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <android.support.design.widget.AppBarLayout
-                android:layout_height="wrap_content"
+            android:background="@color/color_toolbar"
+            android:padding="@dimen/_4sdp"
+            >
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsingToolbar"
                 android:layout_width="match_parent"
-                android:background="@color/color_toolbar"
-                android:padding="@dimen/_4sdp"
-                >
+                android:layout_height="wrap_content"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     app:logo="@drawable/logo"
                     android:theme="@style/AppTheme.Lazada"
+                    app:layout_scrollFlags="scroll|enterAlways"
+                    app:layout_collapseMode="pin"
                     />
                 <LinearLayout
+                    android:id="@+id/linearSearch"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
                     android:background="@drawable/bg_search"
+                    android:layout_marginTop="?attr/actionBarSize"
                     android:layout_marginLeft="@dimen/_8sdp"
                     android:layout_marginRight="@dimen/_8sdp"
+                    app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|snap"
+                    app:layout_collapseMode="parallax"
                     >
                     <Button
                         android:id="@+id/buttonSearch"
@@ -60,23 +69,29 @@
                         android:padding="@dimen/_8sdp"
                         />
                 </LinearLayout>
-                <android.support.design.widget.TabLayout
-                    android:id="@+id/tabBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:tabMode="scrollable"
-                    app:tabTextAppearance="@style/AppTheme.TextNormal"
-                    app:tabTextColor="@color/material_color_blue_grey_100"
-                    android:theme="@style/AppTheme.Lazada"
-                    />
-            </android.support.design.widget.AppBarLayout>
+            </android.support.design.widget.CollapsingToolbarLayout>
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:tabMode="scrollable"
+                app:tabTextAppearance="@style/AppTheme.TextNormal"
+                app:tabTextColor="@color/material_color_blue_grey_100"
+                android:theme="@style/AppTheme.Lazada"
+                />
+        </android.support.design.widget.AppBarLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            >
             <android.support.v4.view.ViewPager
                 android:id="@+id/pagerTrangChu"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 />
-        </LinearLayout>
-    </FrameLayout>
+        </FrameLayout>
+    </android.support.design.widget.CoordinatorLayout>
     <android.support.design.widget.NavigationView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -101,3 +116,6 @@
         </LinearLayout>
     </android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>
+
+
+
